# repo_sample_extractor

./: .gitignore  README.md  my-repos.txt  pyproject.toml  repos.txt
src/repo_sampler/: agent.py  analyzer.py  anonymizer.py  cloner.py  config.py  languages.py  main.py  prompts.py  scorer.py  selector.py  summarizer.py  tree.py  writer.py
test10/: samples.jsonl
test10/__Users__lenant__dev__casino/: agent_log.json  repo_summary.md
test10/__Users__lenant__dev__casino/samples/src/: constants.py  dependencies.py  exceptions.py  schemas.py
test10/__Users__lenant__dev__casino/samples/src/api/: gemini_caller.py  llm_caller.py
test10/__Users__lenant__dev__klask-2/: agent_log.json  repo_summary.md
test10/__Users__lenant__dev__klask-2/samples/scripts/: benchmark_snapshots.py  record_demo.py
test10/__Users__lenant__dev__klask-2/samples/src/klask_rl/: __init__.py  (+6 more)
test10/__Users__lenant__dev__klask-2/samples/tests/: test_cli.py  test_envs.py  test_physics.py  test_training.py  test_training_smoke.py
test10/__Users__lenant__dev__so100-mujoco-sim/: agent_log.json  repo_summary.md
test10/__Users__lenant__dev__so100-mujoco-sim/samples/: reach_env.py  test_model.py
test10/__Users__lenant__dev__so100-mujoco-sim/samples/scripts/: gemini_er_control.py  real_agent_service.py  real_camera.py
test10/__Users__lenant__dev__so100-mujoco-sim/samples/tests/: test_agent_service.py
tests/: test_agent_loop.py  test_agent_tools.py  test_analyzer.py  test_anonymizer.py  test_cloner.py  test_languages.py  test_main.py  test_scorer.py  test_selector.py  test_tree.py  test_writer.py
(+7 files in other folders)
